# emutestbox

./: .gitignore  .gitmodules  README.md  gmon.out  meson.build
inc/: api.h  debugger.h  loader.h  runner.h
profile-results/: callgrind_out_ref_1.dot  callgrind_out_ref_1.txt  callgrind_out_ref_2.dot  callgrind_out_ref_2.txt
src/: api.c  debugger.c  loader.c  runner.c
tests/: api.c  api_profile.txt  debugger.c  loader.c  loader_profile.txt  ref_1.c  ref_2.c  run_tests.sh
tests/dummy_tests/: 00.json
